fix: Search Bar z-index Fixed

--- a/content/CSS/app.css
+++ b/content/CSS/app.css
@@ -695,8 +695,12 @@ video {
 :root {
   --swiper-navigation-color: #fff;
   --swiper-pagination-color: #fff;
-  --swiper-pagination-bottom: 40px;
+  --swiper-pagination-bottom: 30px;
   --swiper-pagination-bullet-size: 10px;
+}
+
+.swiper-slide img {
+  filter: brightness(0.8);
 }
 
 .sr-only {
@@ -808,6 +812,10 @@ video {
 
 .z-30 {
   z-index: 30;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .col-span-2 {
@@ -1012,6 +1020,10 @@ video {
   height: 1.5rem;
 }
 
+.h-0 {
+  height: 0px;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -1058,6 +1070,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.w-0 {
+  width: 0px;
 }
 
 .w-10 {
@@ -2774,6 +2790,16 @@ video {
   color: rgb(250 204 21 / var(--tw-text-opacity, 1));
 }
 
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#5264ff\] {
+  --tw-text-opacity: 1;
+  color: rgb(82 100 255 / var(--tw-text-opacity, 1));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -3445,10 +3471,6 @@ video {
 
   .xl\:h-\[810px\] {
     height: 810px;
-  }
-
-  .xl\:h-auto {
-    height: auto;
   }
 
   .xl\:w-11 {
